--- a/ALL2_sample_templates/Manager/navigation.css
+++ b/ALL2_sample_templates/Manager/navigation.css
@@ -1,8 +1,63 @@
 #navcolumn {
-    position: fixed;
-    width: 13%;
-    height: 100%;
-    left: 0;
+    display: inline-grid;
+    justify-content: center;
+    text-align: center;
+    
+    position: relative;
+    overflow: hidden;
+
+    width: 3em;
+    height: 18em;
+    top: 30%;
+    left: 1%;
     z-index: 1;
-    background-color: aqua;
+
+    border-radius: 30px;
+    background-color: #CBD4C2;
+}
+
+.nav {
+    place-content: center;
+    position: relative;
+    width: 2em;
+    height: 2em;
+    top: 15%;
+    left: -4em;
+}
+
+.logo {
+    width: 2em;
+    height: 2em;
+    filter: drop-shadow(4em 0 0px #FFFFFF);
+}
+
+p {
+    margin: 0;
+    top: -1.5em;
+    left: 6.5em;
+    position: relative;
+}
+
+.navfull {
+    position: relative;
+    padding-left: 6.5em;
+    left: 0;
+    visibility: hidden;
+}
+
+#navcolumn:hover {
+    overflow: hidden;
+    width: 8.5em;
+    .navfull {
+        visibility: visible;
+    }
+    .nav {
+        left: -6em;
+    }
+}
+
+a:hover {
+    .logo{
+        filter: drop-shadow(4em 0 0px #523249);
+    }
 }
