Fixed image border issue

--- a/ALLProject/templates/registration/login.html
+++ b/ALLProject/templates/registration/login.html
@@ -1,10 +1,13 @@
 {% load static %}
 <!DOCTYPE html>
 <html>
+    <head>
     <link rel = "stylesheet" href="{% static 'css/index.css' %}">
     <title>{% block title %} 
         User Login
     {% endblock title %} </title>
+    </head>
+    
     <body>
         <div id="form-container">
             <div id="form-left">
