--- a/ALLProject/static/css/index.css
+++ b/ALLProject/static/css/index.css
@@ -1,6 +1,8 @@
 @media only screen and (max-width: 1920px) {
     body {
         margin: 0%;
+        padding: 0;
+        border : 0;
         background-image: url(../images/warehouse-1.jpg);
     }
 
