--- a/ALL2_sample_templates/Manager/dashboard.css
+++ b/ALL2_sample_templates/Manager/dashboard.css
@@ -13,11 +13,16 @@ h1 {
     font-family: "Sansation", sans-serif;
     font-weight: 400;
     font-style: normal;
-    margin-block-start: 0%;
     width: auto;
     height: 10vh;
+    
+    margin-block-start: 0%;
+    position: relative;
+    z-index: 2;
     top: 0;
+
     background-color: white;
+    box-shadow: 4px 2px 4px gray;
 }
 
 #main-content {
