sales page html css

--- a/ALL2_sample_templates/Manager/sales.css
+++ b/ALL2_sample_templates/Manager/sales.css
@@ -123,8 +123,10 @@ h1 {
 }
 
 #transac-details {
-    width: 80%;
+    width: 95%;
     height: calc(80% - 2em);
+    margin-left: 2.5%;
+    margin-right: 2.5%;
 }
 
 #transac-total {
@@ -136,6 +138,73 @@ h1 {
     font-weight: 600;
     font-style: normal;
     font-size: 1.5vw;
+}
+
+.transac-switch {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 20%;
+    height: 10%;
+    border-style: none;
+    background-color: #CDE7A1;
+
+    font-family: "Mukta Mahee", sans-serif;
+    font-weight: 600;
+    font-style: normal;
+    font-size: 1vw;
+}
+
+.periods {
+    position: absolute;
+    bottom: 0;
+
+    margin: 0;
+    width: auto;
+    color: #839762;
+}
+
+.periods.monthly {
+    top: 0;
+    color: #000;
+    font-size: 1.7vw;
+    justify-self: anchor-center;
+    padding-right: 20%;
+}
+
+.periods.daily {
+    width: fit-content;
+    justify-self: end;
+    right: 0;
+    padding-right: 5%;
+}
+
+.transac-switch:focus{
+    .periods.daily {
+        top: 0;
+        color: #000;
+        font-size: 1.7vw;
+        justify-self: anchor-center;
+        padding-right: 20%;
+    }
+    .periods.monthly {
+        justify-self: end;
+        top: auto;
+        bottom: 0;
+        right: 0;
+    
+        margin: 0;
+        width: fit-content;
+        height: fit-content;
+        padding-right: 5%;
+        font-size: 1vw;
+        color: #839762;
+    }
+}
+
+table.transac-table {
+    width: 100%;
+    text-align: center;
 }
 
 .container {
@@ -236,10 +305,11 @@ ul {
 }
 
 #stocks-table {
-    width: 100%;
+    width: 95%;
     height: 82%;
-    padding-left: 2.5%;
-    padding-right: 2.5%;
+    margin-left: 2.5%;
+    margin-right: 2.5%;
+    border-collapse: collapse;
 }
 
 #header {
@@ -248,3 +318,35 @@ ul {
     top: 0;
     height: 5%;
 }
+
+thead.stocks-table {
+    position: sticky;
+    z-index: 100;
+    top: 0;
+    padding-bottom: 0.5em;
+    border-style: dashed;
+}
+
+tbody.stocks-table {
+    vertical-align: top;
+    text-align: center;
+}
+
+tr.stocks-table {
+    vertical-align: middle;
+    height: 3em;
+    background-color: #E8656A;
+}
+
+.stocks-approval {
+    width: 80%;
+    height: 80%;
+    background-color: #F0D38B;
+    border-style: none;
+    border-radius: 20px;
+}
+
+.stocks-approval:hover {
+    background-color: #CDE7A0;
+}
+
