Semi-completed product list page

--- a/ALLProject/templates/registration/login.html
+++ b/ALLProject/templates/registration/login.html
@@ -12,7 +12,7 @@
         <div id="form-container">
             <div id="form-left">
                 {% block content %}
-                    <h1>App Name</h1>
+                    <h1>Warehub</h1>
                     <form method="POST" id="loginForm">
                         {% csrf_token%}
 
