--- a/ALL2_sample_templates/Manager/user_page.css
+++ b/ALL2_sample_templates/Manager/user_page.css
@@ -199,13 +199,31 @@ h4 {
     height: 85%;
     background-color: #FFF;
     box-shadow: -8px 8px 0px 0px rgba(0,0,0,0.3);
+    
+    font-family: "Mukta Mahee", sans-serif;
+    font-weight: 600;
+    font-style: normal;
 }
 
 #close {
-    margin-left: 2%;
-    margin-top: 2%;
     width: 4vh;
     height: 4vh;
+    padding: 0;
+}
+
+#close-box {
+    width: 6vh;
+    height: 6vh;
+    margin-top: 1%;
+    margin-left: 2%;
+
+    background-color: transparent;
+    border-style: none;
+    border-radius: 10px;
+}
+
+#close-box:hover {
+    background-color: #D9D9D9;
 }
 
 .addUser.title {
@@ -215,11 +233,15 @@ h4 {
     margin: 0;
     width: fit-content;
     height: fit-content;
+    
+    font-family: "Mukta Mahee", sans-serif;
+    font-weight: 800;
+    font-style: normal;
 }
 
 form.addUser {
     margin: 0;
-    margin-top: 5%;
+    margin-top: 3%;
     width: 80%;
     height: 90%;
     justify-self: center;
@@ -229,11 +251,18 @@ form.addUser {
 input.addUser {
     width: 100%;
     height: 6%;
-    margin: 3%;
+    margin: 2%;
     margin-bottom: 5%;
+    padding-left: 2%;
+    padding-right: 2%;
+
     background: rgba(195, 178, 153, 0.25);
     border-radius: 5px;
     border-style: none;
+    
+    font-family: "Mukta Mahee", sans-serif;
+    font-weight: 400;
+    font-style: normal;
 }
 
 .addUser.role {
@@ -252,6 +281,15 @@ input.addUser {
     height: 8%;
     background: #C3B299;
     border-radius: 20px;
+    font-family: "Mukta Mahee", sans-serif;
+    font-weight: 800;
+    font-size: 1vw;
+    font-style: normal;
+}
+
+.addUser.submit:hover {
+    color: #FFF;
+    background: #815355;
 }
 
 .editBtn-box {
@@ -282,7 +320,7 @@ input.addUser {
 }
 
 /* When add user is clicked/active */
-/*
+
 .adduser-box {
     visibility: visible;
 }
@@ -300,7 +338,7 @@ input.addUser {
 #user-list {
     grid-template-columns: 1fr 1fr;
 }
-*/
+
 
 .editBtn.del {
     width: 40%;
